# upflow

./: .env.docker  .gitignore  README.md  docker-compose.yml
infra/litellm/: config.yaml
schemas/avro/: feedback-moderated.avsc
upflow/: pom.xml
upflow-core-api/: pom.xml
upflow-core-api/src/main/resources/: application.properties
upflow-feedback/: Dockerfile  build.gradle  settings.gradle
upflow-feedback/src/main/avro/: feedback-flagged.avsc  feedback-submitted.avsc
upflow-feedback/src/main/resources/: application-dev.yml  application.properties  application.yml
upflow-feedback/src/test/resources/: application-test.yml
upflow-moderation-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
upflow-moderation-service/moderation/: __main__.py  avro.py  config.py  consumer.py  dependencies.py  models.py  producer.py
upflow-moderation-service/moderation/services/: llm.py  moderation.py  name_filter.py  pii.py
upflow-moderation-service/schemas/avro/: feedback-flagged.avsc
upflow-moderation-service/scripts/: setup.sh
upflow-moderation-service/tests/: test_moderator.py
upflow-moderation-service/upflow_moderation_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
upflow-sso/: pom.xml
upflow-sso/src/main/resources/: application.properties
upflow-ui/: README.md  angular.json  package-lock.json  package.json
upflow-ui/src/: index.html  styles.scss
upflow-ui/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
upflow-ui/src/assets/: _theme.scss
upflow-ui/src/styles/: _variables.scss
(+180 files in other folders)
